[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gimix-fire"
description = "Gimix Fire Command Tools."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT License"}
keywords = ["gimix", "mix", "gimmick", "command"]
authors = [
    { name = "Yuya Honda", email = "yuyahnd.info@gmail.com" }
]
maintainers = [
    { name = "Yuya Honda", email = "yuyahnd.info@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "gimix@git+https://github.com/yuyahnd/gimix",
    "fire==0.6.0",
]

dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest==7.2.1",
    "pytest-cov==4.0.0",
    "flake8==6.0.0",
    "tox==4.4.4",
]

[project.urls]
"Homepage" = "https://github.com/yuyahnd/gimix-fire"
"Bug Tracker" = "https://github.com/yuyahnd/gimix-fire/issues"
"Repository" = "https://github.com/yuyahnd/gimix-fire.git"

[project.scripts]
gm = "gimixfire:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "gimixfire.__version__"}

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
